--- a/educador.html
+++ b/educador.html
@@ -10,20 +10,20 @@
 
     <ul>
         <li><a href="bloom.html"> bloom</a></li>
-        <li>verbo </li>
-        <li>competência </li>
-        <li>etapa </li>
-        <li>missão </li>
-        <li>história </li>
+        <li><a href="verbo.html"> verbo </a></li>
+        <li><a href="competencia.html"> competência </a></li>
+        <li><a href="etapa.html"> etapa </a> </li>
+        <li><a href="missao.html"> missão </a></li>
+        <li><a href="historia.html"> história </a></li>
         
-
+ </ul>
 
 
 
 
 <a href=""></a>
 
-    </ul>
+   
     
 </body>
 </html>
