--- a/teste.html
+++ b/teste.html
@@ -1,11 +1,6 @@
-<label for="browser">Choose your browser from the list:</label>
-<input list="browsers" name="browser" id="browser">
-
-<datalist id="browsers">
-  <option value="Edge">
-  <option value="Firefox">
-  <option value="Chrome">
-  <option value="Opera">
-  <option value="Safari">
-</datalist>
- 
+<label for="opcoes">Selecione uma opção:</label>
+<select id="opcoes" name="opcoes">
+    <option value="opcao1">Opção 1</option>
+    <option value="opcao2">Opção 2</option>
+    <option value="opcao3">Opção 3</option>
+</select>
