--- a/verbo.html
+++ b/verbo.html
@@ -7,6 +7,17 @@
     <title>Gestão de verbos</title>
 </head>
 <body>
+    <ul>
+        <li><a href="educador.html"> inicio</a></li>
+        <li><a href="bloom.html"> bloom</a></li>
+        <li> <a href="verbo.html">verbo </a></li>
+        <li> <a href="competencia.html">competência </a></li>
+        <li><a href="etapa.html">etapa</a></li>
+        <li><a href="missao.html"> missão</a> </li>
+        <li><a href="historia.html">história </a></li>
+        
+ </ul>
+ 
     <h1>Cadastro de Verbos</h1>
     <form>
         <LAbel>Nível Bloom</LAbel> 
