--- a/missao.html
+++ b/missao.html
@@ -17,17 +17,17 @@
         <li><a href="historia.html">história </a></li>
  </ul>
 <h1>Missão</h1>
-<label>Competência*</label>
-<input type="text" name="comp" id="comp"> <input type="submit" value="enviar"> <br>
-<LAbel >Selecione o nível da força*</LAbel> 
+
+<LAbel></LAbel> 
 <select>
-    <option disabled selected>select</option>
+    <option disabled selected>Selecione o nível da força*</option>
     <option>1</option>
     <option>2</option>
     <option>3</option>
     <option>4</option>
     <option>5</option>
     <option>6</option>
-</select>
+</select> <br> <br>
+
 </body>
 </html>
